--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^7.4.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "typeface-josefin-sans": "^1.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +31,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "prettier": "2.2.1"
+  }
 }
