--- a/package.json
+++ b/package.json
@@ -12,15 +12,26 @@
   "author": "Edgardo Molina",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-ensure-login": "^0.1.1",
+    "connect-pg-simple": "^6.2.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.4.1",
     "pg-hstore": "^2.3.3",
+    "query-string": "^7.0.0",
     "sequelize": "^5.22.3",
+    "session-file-store": "^1.5.0",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "nodemon": "^2.0.7"
   },
   "nodemonConfig": {
