--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "react-hook-form": "^7.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
+    "react-toastify": "^7.0.4",
     "typeface-josefin-sans": "^1.1.13"
   },
   "scripts": {
