--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,23 @@
-# WARNING
-# THIS IS AN EXAMPLE FILE. DO NOT MOFIDY THIS FILE.
-# READ INSTRUCTIONS CAREFULLY.
-#
-# We will use this file to store sensitive information
-# that our application requires, such as:
-#   - SECRETS/SESSION KEYS
-#   - CREDENTIALS
-#   - API KEYS
-#   - CONFIGURATION INFO
-#
-# INSTRUCTIONS:
-#   1. copy file `.env.example` into `.env`
-#   2. modify/add any ENVIRONMENT VARIABLES
-#   3. make sure `.env` is in `.gitignore`
-#
-# Add environment variables below in this format:
-# KEY=VALUE
-#
-# Each ENVIRONMENT VARIABLE define will be available in
-# `process.env.KEY` in your code
-
-# PORT Number for API
+# The port to run the backend API on.
 PORT=8080
 
-# SESSION_SECRET="super_long_secret_that_should_be_replaced"
+# The secret to be used for authentication.
+AUTH_SECRET=
+
+# The credentials for authenticating with the Edanam API.
+EDAMAM_APP_ID=
+EDAMAM_APP_KEY=
+
+# The domain where the frontend will be hosted.
+FRONTEND_DOMAIN=https://example.com
+
+# The database settings for express-session's pg pool.
+DB_USERNAME=
+DB_PASSWORD=
+DB_HOST=postgres.example.com
+DB_PORT=5432
+DB_DATABASE=recipedia
+
+# When running the backend in production, the database URL connection string to use. Refer to
+# https://sequelize.org/master/manual/getting-started.html for instructions on how to format your database URL.
+DATABASE_URL=postgres://user:pass@example.com:5432/dbname
